<resources>
    <string name="app_name">Countdown</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">SUPER BOWL 51</string>
    <string name="add_widget">Add widget</string>

    <string name="event_name">SUPER BOWL 51</string>
    <string name ="event_date">2017-02-07</string>
    <string name="event_dialog">Victory begins in the Heart</string>
    <string name="event_details">Until the big game February 5th, 2017</string>
    <string name="widget_Image">dd</string>
    <string name="available">Available</string>
    <string name="zero_value">00</string>
    <string name="days">Days</string>
    <string name="hours">Hour</string>
    <string name="minutes">Minute</string>
    <string name="seconds">Second</string>

    <string name="box1">Videos</string>
    <string name="box2">Images</string>
    <string name="box3">Order Now</string>
    <string name="box4">Visit Site</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
