<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="#cfffffff"
    android:padding="@dimen/widget_margin"
    android:id="@+id/full"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:orientation="horizontal"

        android:layout_weight="1"


        >

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="72dp"
                android:layout_height="match_parent"
            android:src="@drawable/handball"
            android:layout_gravity="center"
            android:contentDescription="@string/widget_Image" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:orientation="vertical"
        android:id="@+id/main"
        android:layout_weight="1"

        >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_gravity="start"
        android:id="@+id/text"

        >
        <TextView
            android:id="@+id/appwidget_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="4dp"

            android:contentDescription="@string/appwidget_text"
            android:text="@string/appwidget_text"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:layout_gravity="center"

            />

            <TextView
                android:id="@+id/wevent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/available"
                android:textColor="#c4fe0b02"
                android:textSize="30sp"
                android:textStyle="bold"

                android:visibility="gone"
                />


        </LinearLayout>





    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/countdown"
        android:layout_weight="1"


        android:baselineAligned="false">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/heading"

        >

        <TextView
            android:id="@+id/txtWTimerDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/zero_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_orange_dark" />

        <TextView
            android:id="@+id/txt_WTimerDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/days"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_orange_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtWTimerHour"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/zero_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/txt_WTimerHour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/hours"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtWTimerMinute"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/zero_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_orange_dark" />

        <TextView
            android:id="@+id/txt_WTimerMinute"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/minutes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_orange_dark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtWTimerSecond"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/zero_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_orange_dark" />

        <TextView
            android:id="@+id/txt_WTimerSecond"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/seconds"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_orange_dark" />


    </LinearLayout>
    </LinearLayout>
</LinearLayout>


    </LinearLayout>
</LinearLayout>
